--- a/.azdo/build.yml
+++ b/.azdo/build.yml
@@ -1,5 +1,9 @@
 steps:
 - checkout: self
+- task: UseDotNet@2
+  inputs:
+    version: '7.x'
+    includePreviewVersions: true # Required for preview versions
 - task: DotNetCoreCLI@2
   displayName: New Manifest for tool
   inputs:
@@ -47,4 +51,3 @@ steps:
   inputs:
     PathtoPublish: $(Build.SourcesDirectory)/SQL/dbscript.sql
     ArtifactName: SQLScripts
-
